draws line and polygon

--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@ body {
   color:rgba(255,0,0,.9);
   letter-spacing:2px;
 }
+.line {
+  fill: rgba(255,0,0,.2);
+  stroke: red;
+  stroke-width: 3px;
+  stroke-dasharray:3,5;
+}
+.drawing{
+  overflow:hidden;
+}
 
 </style>
 <body>
